NegativeNumAddSubtract/src/sample/startTest.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.control.DialogPane?>
<?import javafx.scene.control.Label?>
<?import javafx.scene.control.TextField?>
<?import javafx.scene.layout.*?>
<DialogPane xmlns:fx="http://javafx.com/fxml"
            fx:controller="sample.StartTestController">
    <content>
        <GridPane vgap="10" hgap="10">
            <Label text="Choose number of question (limit 100): " GridPane.rowIndex="0" GridPane.columnIndex="0"/>
            <TextField fx:id="numOfQuestion" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
        </GridPane>
    </content>

</DialogPane>
